Refactor project structure by moving CSS and JavaScript files to dedicated directories; added new sections for conversation topics, cues, and misunderstandings in index.html.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joren - Personal User Manual</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,6 +19,9 @@
                 <a href="#about" class="nav-link">About</a>
                 <a href="#work-with-me" class="nav-link">Work With Me</a>
                 <a href="#communication" class="nav-link">Communication</a>
+                <a href="#conversation" class="nav-link">Conversation</a>
+                <a href="#cues" class="nav-link">Cues</a>
+                <a href="#misunderstandings" class="nav-link">Misunderstandings</a>
                 <a href="#values" class="nav-link">Values</a>
                 <a href="#favorites" class="nav-link">Favorites</a>
             </div>
@@ -163,7 +166,7 @@
                             <span class="method-icon">💬</span>
                             <div>
                                 <strong>Messaging Apps</strong>
-                                <p>Great for quick check-ins</p>
+                                <p>Great for quick check-ins or freeflowing conversations</p>
                             </div>
                         </div>
                         <div class="method-item limited">
@@ -192,6 +195,220 @@
                         </div>
                         <div class="approach-item">
                             <strong>Response Time:</strong> Within 1 business day
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Conversation Topics Section -->
+    <section id="conversation" class="section dark-section">
+        <div class="container">
+            <h2 class="section-title">Conversation Topics</h2>
+            <div class="conversation-grid">
+                <div class="conversation-card">
+                    <h3>🎮 Great Topics</h3>
+                    <div class="topic-list">
+                        <div class="topic-item good">
+                            <span class="topic-icon">🎮</span>
+                            <div>
+                                <strong>Video Games</strong>
+                                <p>Especially Nintendo titles</p>
+                            </div>
+                        </div>
+                        <div class="topic-item good">
+                            <span class="topic-icon">📺</span>
+                            <div>
+                                <strong>Anime & Manga</strong>
+                                <p>Pokemon, Frieren, Konosuba</p>
+                            </div>
+                        </div>
+                        <div class="topic-item good">
+                            <span class="topic-icon">🔧</span>
+                            <div>
+                                <strong>Technology Trends</strong>
+                                <p>Latest tech developments</p>
+                            </div>
+                        </div>
+                        <div class="topic-item good">
+                            <span class="topic-icon">📱</span>
+                            <div>
+                                <strong>YouTube Content</strong>
+                                <p>Specific creator content</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="conversation-card">
+                    <h3>🚫 Avoid These Topics</h3>
+                    <div class="topic-list">
+                        <div class="topic-item bad">
+                            <span class="topic-icon">🗣️</span>
+                            <div>
+                                <strong>Gossip & Drama</strong>
+                                <p>Personal drama and office politics</p>
+                            </div>
+                        </div>
+                        <div class="topic-item bad">
+                            <span class="topic-icon">😤</span>
+                            <div>
+                                <strong>Confrontational Topics</strong>
+                                <p>Negative situations I can't control</p>
+                            </div>
+                        </div>
+                        <div class="topic-item bad">
+                            <span class="topic-icon">💬</span>
+                            <div>
+                                <strong>Superficial Small Talk</strong>
+                                <p>Surface-level conversations</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Cues Section -->
+    <section id="cues" class="section">
+        <div class="container">
+            <h2 class="section-title">Cues to Look For</h2>
+            <div class="cues-grid">
+                <div class="cues-card">
+                    <h3>✅ Good Signs</h3>
+                    <div class="cues-list">
+                        <div class="cue-item positive">
+                            <span class="cue-icon">😊</span>
+                            <div>
+                                <strong>Engaged & Responsive</strong>
+                                <p>Actively participating in conversation</p>
+                            </div>
+                        </div>
+                        <div class="cue-item positive">
+                            <span class="cue-icon">💡</span>
+                            <div>
+                                <strong>Creative Solutions</strong>
+                                <p>Offering unique problem-solving ideas</p>
+                            </div>
+                        </div>
+                        <div class="cue-item positive">
+                            <span class="cue-icon">🎯</span>
+                            <div>
+                                <strong>Focused & Productive</strong>
+                                <p>Deep concentration on tasks</p>
+                            </div>
+                        </div>
+                        <div class="cue-item positive">
+                            <span class="cue-icon">🤝</span>
+                            <div>
+                                <strong>Helpful & Supportive</strong>
+                                <p>Offering technical assistance</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="cues-card">
+                    <h3>⚠️ Warning Signs</h3>
+                    <div class="cues-list">
+                        <div class="cue-item negative">
+                            <span class="cue-icon">😐</span>
+                            <div>
+                                <strong>Quiet or Withdrawn</strong>
+                                <p>May need encouragement to participate</p>
+                            </div>
+                        </div>
+                        <div class="cue-item negative">
+                            <span class="cue-icon">😰</span>
+                            <div>
+                                <strong>Stressed or Overwhelmed</strong>
+                                <p>Too many simultaneous demands</p>
+                            </div>
+                        </div>
+                        <div class="cue-item negative">
+                            <span class="cue-icon">😤</span>
+                            <div>
+                                <strong>Frustrated</strong>
+                                <p>Being interrupted or rushed</p>
+                            </div>
+                        </div>
+                        <div class="cue-item negative">
+                            <span class="cue-icon">😵</span>
+                            <div>
+                                <strong>Distracted or Zoned Out</strong>
+                                <p>ADHD - not personal, just processing</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Misunderstandings Section -->
+    <section id="misunderstandings" class="section dark-section">
+        <div class="container">
+            <h2 class="section-title">Things People Misunderstand</h2>
+            <div class="misunderstandings-grid">
+                <div class="misunderstanding-card">
+                    <h3>🤔 Common Misconceptions</h3>
+                    <div class="misunderstanding-list">
+                        <div class="misunderstanding-item">
+                            <div class="misconception">
+                                <strong>❌ "Your ADHD means you can't focus"</strong>
+                                <p>Actually: I can focus deeply when in the right environment</p>
+                            </div>
+                        </div>
+                        <div class="misunderstanding-item">
+                            <div class="misconception">
+                                <strong>❌ "You're quiet, so you're unapproachable"</strong>
+                                <p>Actually: I'm friendly and want to be included - just need encouragement</p>
+                            </div>
+                        </div>
+                        <div class="misunderstanding-item">
+                            <div class="misconception">
+                                <strong>❌ "You're not interested if you don't respond immediately"</strong>
+                                <p>Actually: I might be focused on work and need a kind reminder</p>
+                            </div>
+                        </div>
+                        <div class="misunderstanding-item">
+                            <div class="misconception">
+                                <strong>❌ "You're antisocial"</strong>
+                                <p>Actually: I'm introverted but enjoy meaningful conversations</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="misunderstanding-card">
+                    <h3>💡 What I Wish People Knew</h3>
+                    <div class="wish-list">
+                        <div class="wish-item">
+                            <span class="wish-icon">💝</span>
+                            <div>
+                                <strong>I'm Friendly</strong>
+                                <p>Even though I'm quiet, I'm approachable and caring</p>
+                            </div>
+                        </div>
+                        <div class="wish-item">
+                            <span class="wish-icon">🎯</span>
+                            <div>
+                                <strong>I'm Capable</strong>
+                                <p>ADHD doesn't mean I can't do focused, quality work</p>
+                            </div>
+                        </div>
+                        <div class="wish-item">
+                            <span class="wish-icon">🤝</span>
+                            <div>
+                                <strong>I Want to Help</strong>
+                                <p>I love solving problems and supporting others</p>
+                            </div>
+                        </div>
+                        <div class="wish-item">
+                            <span class="wish-icon">💭</span>
+                            <div>
+                                <strong>I'm Processing</strong>
+                                <p>When I seem distracted, I'm often deep in thought</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -338,6 +555,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html> 
