Replace logo image with a new design and add a branding section to index.html, including a description of the logo's significance. Update styles.css to support the new branding layout and styles. Remove the old logo image file.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <div class="hero-logo">
-                <img src="/images/Joren_Logo_transparent.png" alt="Joren Logo" class="hero-logo-img">
+                <img src="/images/Joren_Logo-black.png" alt="Joren Logo" class="hero-logo-img">
             </div>
             <h1 class="hero-title">Personal User Manual</h1>
             <p class="hero-subtitle">Getting the best out of working with me</p>
@@ -63,6 +63,20 @@
     <section id="about" class="section">
         <div class="container">
             <h2 class="section-title">About Me</h2>
+            <div class="brand-card" style="margin-bottom: 40px;">
+                <div class="brand-logo-container">
+                    <img src="images/Joren_Logo-black.png" alt="Joren Logo" class="brand-logo-img">
+                </div>
+                <div class="brand-description">
+                    <h3>Why This Logo?</h3>
+                    <p>
+                        For my personal brand, I designed a logo that reflects who I am and what I want to do as a full stack web developer. Although I aim to be a full stack developer, I really enjoy my work with front-end. The logo uses my name written as <code>&lt;JOREN&gt;</code>, styled to look like an HTML opening tag. I chose this because it represents the beginning of something new, which ties into how I help people bring their ideas to life on the web. I used a bold, all-caps sans-serif font to keep it clean, confident, and easy to read.
+                    </p>
+                    <p>
+                        I also incorporated glasses into the shape of the logo because not only do I wear glasses myself, but they felt like a strong symbol of clarity and vision. To me, this represents my ability to take someone's idea and vision of their website and help shape it into something functional and well-designed. My goal is to build websites that not only work well but also capture the look and feel that clients are imagining.
+                    </p>
+                </div>
+            </div>
             <div class="about-grid">
                 <div class="about-card">
                     <div class="card-icon">👨‍💻</div>
